--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- TODO: Make a favicon that better represents the page. -->
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/main.css">
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/05C1106C-DA86-7C4D-B919-E1E37BBDAE08/main.js" charset="UTF-8"></script></head>
+    </head>
 
     <body>
 
