--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                  way. Also, be sure to choose the proper image format as you
                  insert backgrounds and other images into the page. Balance
                  image quality with file size to achieve the best user
-                 experience. -->
+                 experience. You better finish this. Purpose is for committing-->
             <h1>Monkaa</h1>
             <p class="subtitle">An open source short film</p>
             <nav>
