--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- TODO: Make a favicon that better represents the page. -->
         <link rel="shortcut icon" href="favicon.ico">
+        <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
     </head>
 
@@ -55,13 +56,12 @@
                 <source src="media/video/monkaa_1080p.mp4" type="video/mp4">
                 <p>Your browser does not support HTML5 Video.</p>
             </video>
-            <!-- TODO: Style an elegant download link to download the video. -->
             <h3>Download the video</h3>
             <p>
                 Click below to download either MP4 or WEBM versions of this video.
                 <br>
-                <a class="download-button" href="media/video/monkaa_1080p.mp4">.MP4 Version</a>
-                <a class="download-button" href="media/video/monkaa_1080p.webm">.WEBM Version</a>
+                <button class="download-button" href="media/video/monkaa_1080p.mp4">.MP4 Version</button>
+                <button class="download-button" href="media/video/monkaa_1080p.webm">.WEBM Version</button>
             </p>
         </section>
 
@@ -75,7 +75,7 @@
             </audio>
             <!-- TODO: Style an elegant download link to download the video. -->
             <p>
-                <a class="download-button" href="media/audio/monkaa_soundtrack.mp3">Download as MP3</a>
+                <button class="download-button" href="media/audio/monkaa_soundtrack.mp3">Download as MP3</button>
             </p>
         </section>
 
@@ -84,12 +84,9 @@
                  to look at. Style the "lead" paragraph to be more eye-catching
                  so that text stands out. -->
             <h2>About</h2>
-            <p class="lead">Monkaa is a blue-furred, pink-faced monkey who consumes a crystallized meteorite, making him invincibly strong and too hot to handle. Exploring his new superpowers, Monkaa zooms through an entire universe. </p>
+            <p class="lead">Monkaa is a blue-furred, pink-faced monkey who consumes a crystallized meteorite, making him invincibly strong and too hot to handle.<br> Exploring his new superpowers, Monkaa zooms through an entire universe. </p>
 
             <ul class="weybec-people">
-                <!-- TODO: You must choose the proper image format to use for
-                     each headshot below. Images are located in the
-                     ``img/weybec/`` directory. -->
                 <li>
                     <img class="headshot" src="img/weybec/pratik_solanki.jpg" alt="Pratik Solanki headshot"><br>
                     Pratik Solanki<br>
