--- a/index.html
+++ b/index.html
@@ -86,23 +86,29 @@
             <h2>About</h2>
             <p class="lead">Monkaa is a blue-furred, pink-faced monkey who consumes a crystallized meteorite, making him invincibly strong and too hot to handle.<br> Exploring his new superpowers, Monkaa zooms through an entire universe. </p>
 
-            <ul class="weybec-people">
-                <li>
+            <!--<ul class="weybec-people">-->
+                <!--<li>-->
+                <div class="image-weybec">
                     <img class="headshot" src="img/weybec/pratik_solanki.jpg" alt="Pratik Solanki headshot"><br>
                     Pratik Solanki<br>
                     Co-Founder
-                </li>
-                <li>
+                </div>
+                <!--</li>-->
+                <!--<li>-->
+                <div class="image-weybec">
                     <img class="headshot" src="img/weybec/Nita-ravalji1.jpg" alt="Nita Ravalji headshot"><br>
                     Nita Ravalji<br>
                     Co-Founder
-                </li>
-                <li>
+                </div>
+                <!--</li>-->
+                <!--<li>-->
+                <div class="image-weybec">
                     <img class="headshot" src="img/weybec/niyal_parmar.jpg" alt="Niyal Parmar headshot"><br>
                     Niyal Parmar<br>
                     Co-Founder
-                </li>
-            </ul>
+                </div>
+                <!--</li>-->
+            <!--</ul>-->
 
             <p>Monkaa is produced by <a href="http://www.weybec.com/">Weybec</a>, an animation studio located in Mumbai, India and founded by Pratik Solanki, Nita Ravalji and Niyal Parmar.</p>
 
