--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <!-- TODO: Make a favicon that better represents the page. -->
         <link rel="shortcut icon" href="favicon.ico">
         <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/main.css">
     </head>
 
@@ -67,8 +69,6 @@
 
         <section id="listen">
             <h2>Listen</h2>
-            <!-- TODO: Embed an audio player so users can play back the
-                 soundtrack MP3 directly on the page. -->
             <audio controls>
                 <source src="media/audio/monkaa_soundtrack.mp3" type="audio/mp3">
                 <p>Your browser does not support HTML5 audio playback.</p>
