--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
 
@@ -45,9 +46,9 @@
                  that could help you make a more interactive design. -->
             <h2>Share</h2>
             <ul class="social-links">
-                <li class="twitter"><a href="http://twitter.com">Twitter</a></li>
-                <li class="facebook"><a href="http://facebook.com">Facebook</a></li>
-                <li class="instagram"><a href="http://instagram.com">Instagram</a></li>
+                <li class="twitter"><a href="http://twitter.com" class="fa fa-twitter"></a></li>
+                <li class="facebook"><a href="http://facebook.com" class="fa fa-facebook"></a></li>
+                <li class="instagram"><a href="http://instagram.com" class="fa fa-instagram"></a></li>
             </ul>
         </aside>
 
