--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <title>Monkaa: Watch and Download the animated short film</title>
         <meta name="description" content="Monkaa is a blue-furred, pink-faced monkey who consumes a crystallized meteorite, making him invincibly strong and too hot to handle. Watch and download the animated short film here--for free!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- TODO: Make a favicon that better represents the page. -->
         <link rel="shortcut icon" href="favicon.ico">
         <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -15,17 +14,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
-
     <body>
-
         <header>
-            <!-- TODO: Create an elegant header using either one of the images
-                 or the video loop included in this repository. Make sure the
-                 page navigation is presented clearly and in a user-friendly
-                 way. Also, be sure to choose the proper image format as you
-                 insert backgrounds and other images into the page. Balance
-                 image quality with file size to achieve the best user
-                 experience. You better finish this. Purpose is for committing-->
             <h1>Monkaa</h1>
             <p class="subtitle">An open source short film</p>
             <nav>
@@ -38,12 +28,6 @@
         </header>
 
         <aside id="social">
-            <!-- TODO: Experiment with different ways of making this set of
-                 share links stand out and stay near the user all the time.
-                 Try using 'absolute', 'fixed', or even 'sticky' positioning
-                 to achieve a user-friendly effect. You may also use the
-                 `:hover` pseudoselector to trigger height or width changes
-                 that could help you make a more interactive design. -->
             <h2>Share</h2>
             <ul class="social-links">
                 <li class="twitter"><a href="http://twitter.com" class="fa fa-twitter"></a></li>
@@ -74,16 +58,12 @@
                 <source src="media/audio/monkaa_soundtrack.mp3" type="audio/mp3">
                 <p>Your browser does not support HTML5 audio playback.</p>
             </audio>
-            <!-- TODO: Style an elegant download link to download the video. -->
             <p>
                 <button class="download-button" href="media/audio/monkaa_soundtrack.mp3">Download as MP3</button>
             </p>
         </section>
 
         <section id="about">
-            <!-- TODO: Style this text so it is comfortable to read and nice
-                 to look at. Style the "lead" paragraph to be more eye-catching
-                 so that text stands out. -->
             <h2>About</h2>
             <p class="lead">Monkaa is a blue-furred, pink-faced monkey who consumes a crystallized meteorite, making him invincibly strong and too hot to handle.<br> Exploring his new superpowers, Monkaa zooms through an entire universe. </p>
 
@@ -110,7 +90,7 @@
                 </div>
                 <!--</li>-->
             <!--</ul>-->
-                <img  class="contact-us" src="img/weybecmonkaa.png">
+                <a href="mailto:weybecstudio@gmail.com"><img  class="contact-us" src="img/weybecmonkaa.png">
 
             <p>Monkaa is produced by <a href="http://www.weybec.com/">Weybec</a>, an animation studio located in Mumbai, India<br> and founded by Pratik Solanki, Nita Ravalji and Niyal Parmar.</p>
 
@@ -118,9 +98,9 @@
         </section>
 
         <footer><!-- TODO: Style the footer appropriately. -->
-            <p>This page was created and designed by WEBDEV BEV in 2015. <i>Monkaa</i> was created by <a href="http://www.weybec.com/">Weybec</a> and is used here under a CC-BY license.</p>
+            <p><b>This page was created and designed by WEBDEV BEV in 2015. <i>Monkaa</i> was created by <a href="http://www.weybec.com/">Weybec</a> and is used here under a CC-BY license.</b</p>
             <nav>
-                <ul class="main-nav">
+                <ul class="main-nav-bottom">
                     <li><a href="#watch">Watch</a></li>
                     <li><a href="#listen">Listen</a></li>
                     <li><a href="#about">About</a></li>
