--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
+    
     <body>
         <header>
             <h1>Monkaa</h1>
@@ -66,38 +67,30 @@
         <section id="about">
             <h2>About</h2>
             <p class="lead">Monkaa is a blue-furred, pink-faced monkey who consumes a crystallized meteorite, making him invincibly strong and too hot to handle.<br> Exploring his new superpowers, Monkaa zooms through an entire universe. </p>
-
-            <!--<ul class="weybec-people">-->
-                <!--<li>-->
-                <div class="image-weybec">
+            <ul class="weybec-people">
+                <li>
                     <img class="headshot" src="img/weybec/pratik_solanki.jpg" alt="Pratik Solanki headshot"><br>
                     Pratik Solanki<br>
                     Co-Founder
-                </div>
-                <!--</li>-->
-                <!--<li>-->
-                <div class="image-weybec">
+                </li>
+                <li>
                     <img class="headshot" src="img/weybec/Nita-ravalji1.jpg" alt="Nita Ravalji headshot"><br>
                     Nita Ravalji<br>
                     Co-Founder
-                </div>
-                <!--</li>-->
-                <!--<li>-->
-                <div class="image-weybec">
+                </li>
+                <li>
                     <img class="headshot" src="img/weybec/niyal_parmar.jpg" alt="Niyal Parmar headshot"><br>
                     Niyal Parmar<br>
                     Co-Founder
-                </div>
-                <!--</li>-->
-            <!--</ul>-->
-                <a href="mailto:weybecstudio@gmail.com"><img  class="contact-us" src="img/weybecmonkaa.png">
-
+                </li>
+            </ul>
+            <a href="mailto:weybecstudio@gmail.com"><img  class="contact-us" src="img/weybecmonkaa.png">
             <p>Monkaa is produced by <a href="http://www.weybec.com/">Weybec</a>, an animation studio located in Mumbai, India<br> and founded by Pratik Solanki, Nita Ravalji and Niyal Parmar.</p>
 
             <p>Project Monkaa is a 5-minute short animated movie, entirely made with Blender and GIMP and other Free/Open Software programs. It has been released as an Open Movie, with all production files and tutorials available on <a href="https://cloud.blender.org/open-movie/monkaa/">Blender Cloud</a> under a CC-BY license, as well as on a DVD available in the <a href="http://www.blender3d.org/e-shop/">Blender Store</a>.</p>
         </section>
 
-        <footer><!-- TODO: Style the footer appropriately. -->
+        <footer>
             <p><b>This page was created and designed by WEBDEV BEV in 2015. <i>Monkaa</i> was created by <a href="http://www.weybec.com/">Weybec</a> and is used here under a CC-BY license.</b</p>
             <nav>
                 <ul class="main-nav-bottom">
@@ -106,6 +99,7 @@
                     <li><a href="#about">About</a></li>
                 </ul>
             </nav>
+            <p>Italian Jedi</p>
         </footer>
 
     </body>
